fix spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,7 +39,7 @@
     justify-content: center;
     align-items: center;
     .legend-container {
-      margin-top: 18px;
+      margin: 24px 0;
       .legend {
         background-color: white;
         color: black;
